--- a/lecture_03.ipynb
+++ b/lecture_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1173e19",
+   "id": "dd57b338",
    "metadata": {},
    "source": [
     "# Lecture 3: Loops and Conditions in JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85bde27",
+   "id": "73d7f215",
    "metadata": {},
    "source": [
     "## Introduction to Loops in JAX\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f00e653",
+   "id": "f9edee93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba359187",
+   "id": "8eb2f77d",
    "metadata": {},
    "source": [
     "### Using `jax.lax.fori_loop`\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec5ba458",
+   "id": "21206ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe09dafa",
+   "id": "d64d1157",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bf5f0b",
+   "id": "1ec0c0c3",
    "metadata": {},
    "source": [
     "Now, let's try to re-write the above function using [jax.lax.fori_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.fori_loop.html).\n",
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "306383cb",
+   "execution_count": 4,
+   "id": "7c1ffd49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "fce737a7",
+   "execution_count": 5,
+   "id": "0fa498db",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "Array(285, dtype=int32, weak_type=True)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aab4415",
+   "id": "0bc260d0",
    "metadata": {},
    "source": [
     "In this example, we define a function `sum_squares_jax` that computes the sum of squares from a given start value to an end value using `jax.lax.fori_loop`. The `body_fun` function squares each number from the loop index `i` and accumulates the result in the `total` variable. Finally, the loop is executed with the specified start and end values, and the result is returned."
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7dc6fb",
+   "id": "7d4fae62",
    "metadata": {},
    "source": [
     "### Using `jax.lax.while_loop`\n",
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8980c6c2",
+   "execution_count": 6,
+   "id": "1f4b0730",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "720"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486bf4dd",
+   "id": "09c1d8e6",
    "metadata": {},
    "source": [
     "Now, let's try to re-write the above function using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html)\n",
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "15a6ce5f",
+   "execution_count": 7,
+   "id": "5e70dd2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "796ba48e",
+   "execution_count": 8,
+   "id": "0b115b27",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "Array(720, dtype=int32, weak_type=True)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "763f02c5",
+   "id": "c838a3c5",
    "metadata": {},
    "source": [
     "In this example, we define a function `factorial_jax` that computes the factorial of a number using `jax.lax.while_loop`. The `condition` function checks if the loop variable `i` is less than or equal to `n`, while the `body` function updates the loop state by incrementing `i` and accumulating the factorial in the `result` variable. The loop continues until the condition is `False`, and the final result is returned.\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3572e93b",
+   "id": "8cfc673b",
    "metadata": {},
    "source": [
     "### Using `jax.lax.scan`\n",
@@ -271,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c1091457",
+   "execution_count": 9,
+   "id": "7c18e283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,8 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "81d1ef80",
+   "execution_count": 10,
+   "id": "997feef8",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "[1, 3, 6, 10, 15]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562d9c1f",
+   "id": "26f82e44",
    "metadata": {},
    "source": [
     "Now, let's try to re-write the above function using [jax.lax.scan](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)\n",
@@ -325,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d39eb1e1",
+   "execution_count": 11,
+   "id": "ebdd7ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c7b5f3e2",
+   "execution_count": 12,
+   "id": "b351247e",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Array([ 1,  3,  6, 10, 15], dtype=int32)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a426599",
+   "id": "55ba9c78",
    "metadata": {},
    "source": [
     "In this example, we define a function `cumulative_sums_jax` that computes cumulative sums using `jax.lax.scan`. The `body` function computes the sum of the current element and the carry variable, updating both the loop variable and the carry variable. The loop iterates over the input sequence, accumulating the sums at each step, and the final result is returned."
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ebd720",
+   "id": "596c66ed",
    "metadata": {},
    "source": [
     "## Conditional Execution with JAX\n",
@@ -385,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c1dc3fe5",
+   "execution_count": 13,
+   "id": "a9dac5b6",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f29fbc",
+   "id": "f82abb69",
    "metadata": {},
    "source": [
     "Let's re-write the same using [jax.lax.cond](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.cond.html).\n",
@@ -427,8 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "ff6e5b8a",
+   "execution_count": 14,
+   "id": "a6de73d5",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6344adda",
+   "id": "5c760cac",
    "metadata": {},
    "source": [
     "In this example, we define a function `check_sign_jax` that checks if a number is positive or negative using `jax.lax.cond`. Depending on whether the input `x` is greater than 0 (positive) or not (negative), the corresponding true or false function is executed, and the result is returned."
@@ -468,12 +468,145 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335b9da4",
+   "id": "6dec011f",
    "metadata": {},
    "source": [
-    "In this lecture, we've explored how to leverage different loop constructs provided by JAX—`jax.lax.fori_loop`, `jax.lax.while_loop`, and `jax.lax.scan`. By understanding and utilizing these constructs effectively, we can optimize performance and handle complex computations with ease.\n",
+    "## Why do we need `jax.lax` ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2c05e1",
+   "metadata": {},
+   "source": [
+    "While JAX provides high-level abstractions for numerical computing, leveraging low-level constructs from `jax.lax` can lead to significant speedups, especially when compared to traditional Python for loops.\n",
     "\n",
-    "Also, we've explored how to use `jax.lax.cond` for conditional execution within JAX computations. By leveraging `jax.lax.cond`, users can introduce dynamic control flow into their numerical computations, enabling flexible and efficient handling of different cases or conditions."
+    "Moreover, in-order to use the JAX's JIT, sometime its necessary to leverage low-level constructs.\n",
+    "\n",
+    "###  Importance of Performance Optimization\n",
+    "\n",
+    "Efficient computation is essential for tackling complex problems in machine learning, scientific computing, and other domains. Performance optimization techniques, such as minimizing computational overhead and maximizing hardware utilization, are critical for achieving faster execution times and scaling to larger datasets or models.\n",
+    "\n",
+    "Let's take the example from [fori_loop](#Using-jax.lax.fori_loop) section and\n",
+    "form a compiled jit functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa80af02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computation_jit_lax = jax.jit(sum_squares_jax)\n",
+    "computation_jit_python = jax.jit(sum_squares, static_argnums=(0, 1))\n",
+    "\n",
+    "# Compare execution times\n",
+    "x = 10000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cf8439f",
+   "metadata": {},
+   "source": [
+    "For `computation_jit_python`, JAX requires that the `static_argnums` parameter be provided because `range` itself is a dynamic operation. By specifying the index of the argument that corresponds to the `range`'s upper bound in `static_argnums`, JAX can treat the `range` as static during compilation, optimizing the loop accordingly. This helps avoid unnecessary recompilation of the loop body for different loop bounds, leading to improved performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9352b428",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 10.8 ms, sys: 985 µs, total: 11.8 ms\n",
+      "Wall time: 10.5 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time result_jit_lax = computation_jit_lax(0, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a4086d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 197 µs, sys: 162 µs, total: 359 µs\n",
+      "Wall time: 210 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time result_jit_lax = computation_jit_lax(0, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39dafe54",
+   "metadata": {},
+   "source": [
+    "Running the `computation_jit_lax` takes a bit more time in the first call because of the compilation overhead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "73b272dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 610 µs, sys: 86 µs, total: 696 µs\n",
+      "Wall time: 635 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time result_jit_python = computation_jit_python(0, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c2af3515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 245 µs, sys: 12 µs, total: 257 µs\n",
+      "Wall time: 247 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time result_jit_python = computation_jit_python(0, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033d39bd",
+   "metadata": {},
+   "source": [
+    "Notice the time difference in 2nd calls of both `computation_jit_lax` and `computation_jit_python`.\n",
+    "\n",
+    "The function `computation_jit_lax` has clear advantanges over `computation_jit_python` because of two major reasons:\n",
+    "- Very fast because of `jax.lax` and low-level optimizations done by jax.\n",
+    "- `computation_jit_python` has used `static_argnums` in `jax.jit` which means for every new values of `start` and `end`, `computation_jit_python` will re-compile and evaluate the results which will make it even slower unlike `computation_jit_lax`. Once compiled, `computation_jit_lax` will call the same function irrespective of the value of `start` and `end`."
    ]
   }
  ],
