--- a/lecture_04.ipynb
+++ b/lecture_04.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67ffbd0c",
+   "id": "3012f814",
    "metadata": {},
    "source": [
-    "# Vectorization and `jax.vmap` in JAX\n",
+    "# Lecture 4: Vectorization and Parallelization in JAX\n",
     "\n",
     "## Introduction to Vectorization\n",
     "\n",
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "33cf61f8",
+   "execution_count": 1,
+   "id": "95e2f32e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +32,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a355201",
+   "id": "8f81742f",
    "metadata": {},
    "source": [
-    "## Writing Vectorized Code in JAX\n",
+    "### Writing Vectorized Code in JAX\n",
     "\n",
     "Vectorized code in JAX can be written using JAX's NumPy-like API, which supports operations on arrays and tensors. By expressing computations in terms of array operations, such as element-wise arithmetic, matrix multiplication, and broadcasting, developers can harness the full potential of vectorization in JAX.\n",
     "\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ef5bb91",
+   "id": "3ca731d6",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "a32306e7",
    "metadata": {
     "hide-output": false
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a02f63ae",
    "metadata": {
     "hide-output": false
@@ -117,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.17 s, sys: 7.38 ms, total: 1.18 s\n",
-      "Wall time: 1.18 s\n"
+      "CPU times: user 1.15 s, sys: 7.26 ms, total: 1.16 s\n",
+      "Wall time: 1.14 s\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a70392f1",
    "metadata": {
     "hide-output": false
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9dc646ef",
    "metadata": {
     "hide-output": false
@@ -178,7 +178,7 @@
        "(80,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "76356ca7",
    "metadata": {
     "hide-output": false
@@ -209,7 +209,7 @@
        "(80, 80)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b3db1c31",
    "metadata": {
     "hide-output": false
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "ec347481",
    "metadata": {
     "hide-output": false
@@ -258,8 +258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33.6 ms, sys: 2.76 ms, total: 36.3 ms\n",
-      "Wall time: 33.1 ms\n"
+      "CPU times: user 11.2 ms, sys: 1.03 ms, total: 12.2 ms\n",
+      "Wall time: 11 ms\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "dc57a149",
    "metadata": {
     "hide-output": false
@@ -281,8 +281,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 533 µs, sys: 85 µs, total: 618 µs\n",
-      "Wall time: 458 µs\n"
+      "CPU times: user 115 µs, sys: 32 µs, total: 147 µs\n",
+      "Wall time: 140 µs\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "6fac39c5",
    "metadata": {
     "hide-output": false
@@ -314,7 +314,7 @@
        "Array(True, dtype=bool)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "601e4a58",
    "metadata": {
     "hide-output": false
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c731aea6",
    "metadata": {
     "hide-output": false
@@ -358,8 +358,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 217 ms, sys: 27.4 ms, total: 244 ms\n",
-      "Wall time: 86.2 ms\n"
+      "CPU times: user 114 ms, sys: 17.3 ms, total: 131 ms\n",
+      "Wall time: 53.4 ms\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "56cd3443",
    "metadata": {
     "hide-output": false
@@ -381,8 +381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 217 ms, sys: 24.7 ms, total: 241 ms\n",
-      "Wall time: 84.8 ms\n"
+      "CPU times: user 104 ms, sys: 18.1 ms, total: 122 ms\n",
+      "Wall time: 44.2 ms\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "5e27dce7",
    "metadata": {
     "hide-output": false
@@ -414,7 +414,7 @@
        "288000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "bd6d8184",
    "metadata": {
     "hide-output": false
@@ -445,7 +445,7 @@
        "24000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,11 +461,11 @@
    "source": [
     "This extra memory usage can be a big problem in actual research calculations.\n",
     "\n",
-    "## Using `jax.vmap`\n",
+    "### Using `jax.vmap`\n",
     "\n",
     "So let’s try a different approach using [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html)\n",
     "\n",
-    "### Converting loops to `jax.vmap`\n",
+    "#### Converting loops to `jax.vmap`\n",
     "\n",
     "The process of converting loops to `jax.vmap` is simple. You take the inner most loop\n",
     "and vectorized your code over this loop and start forming a nested sequence of `jax.vmap`\n",
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "447d59c4",
    "metadata": {
     "hide-output": false
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "6c367656",
    "metadata": {
     "hide-output": false
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "0b67524b",
    "metadata": {
     "hide-output": false
@@ -529,8 +529,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 174 ms, sys: 19.2 ms, total: 194 ms\n",
-      "Wall time: 88.6 ms\n"
+      "CPU times: user 110 ms, sys: 13.6 ms, total: 124 ms\n",
+      "Wall time: 50.6 ms\n"
      ]
     }
    ],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "e1442b0e",
    "metadata": {
     "hide-output": false
@@ -552,8 +552,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 204 ms, sys: 27.6 ms, total: 232 ms\n",
-      "Wall time: 83.3 ms\n"
+      "CPU times: user 102 ms, sys: 16.3 ms, total: 118 ms\n",
+      "Wall time: 42.7 ms\n"
      ]
     }
    ],
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e6077749",
+   "execution_count": 21,
+   "id": "613a526f",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "(6000, 6000)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "2e8432f7",
    "metadata": {
     "hide-output": false
@@ -608,7 +608,7 @@
        "Array(True, dtype=bool)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,10 +619,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e797ba4",
+   "id": "d198b74b",
    "metadata": {},
    "source": [
-    "### Benefits of Vectorization with jax.vmap\n",
+    "#### Benefits of Vectorization with jax.vmap\n",
     "\n",
     "Vectorizing computations with `jax.vmap` offers several benefits:\n",
     "\n",
@@ -630,6 +630,87 @@
     "- **Simplified Code**: By replacing nested loops with array operations, vectorized code tends to be more concise, readable, and maintainable.\n",
     "- **Scalability**: Vectorization enables scaling computations to larger datasets or batch sizes without significant performance degradation, making it suitable for machine learning tasks and scientific computing.\n",
     "- **Nested Vmaps**: Once can easily replace a sequence of python loops using a sequence of `jax.vmap` and JAX handles all the optimizations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70e8b6ca",
+   "metadata": {},
+   "source": [
+    "## Introduction to parallelization\n",
+    "\n",
+    "Parallelization is a crucial technique for accelerating computations by leveraging the parallelism of modern hardware. In JAX, parallelization can be achieved using `jax.pmap` for parallel mapping and `jax.pjit` for parallel just-in-time compilation. This lecture will explore these constructs in detail, demonstrating how they enable efficient parallel execution on multi-core CPUs and GPUs.\n",
+    "\n",
+    "### Parallel Mapping with `jax.pmap`\n",
+    "\n",
+    "`jax.pmap` is a higher-order function in JAX that parallelizes a function across multiple devices or processors. It maps the function over the leading axis of the input arrays and executes the function in parallel on each device. This enables efficient parallel execution of computations, particularly on GPUs or multi-core CPUs.\n",
+    "\n",
+    "#### Using `jax.pmap`\n",
+    "\n",
+    "Let's illustrate the usage of [jax.pmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.pmap.html) with a simple example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "138efae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to square each element of an array\n",
+    "def square(x):\n",
+    "    return x ** 2\n",
+    "\n",
+    "# Parallelize the function using jax.pmap\n",
+    "parallel_square = jax.pmap(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "10ceecf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Squared elements (parallel): [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply the parallelized function to an array\n",
+    "num_available_devices = jax.local_device_count()\n",
+    "\n",
+    "input_array = jnp.arange(num_available_devices)\n",
+    "\n",
+    "result_array = parallel_square(input_array)\n",
+    "print(\"Squared elements (parallel):\", result_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "027bf0ab",
+   "metadata": {},
+   "source": [
+    "The output is just `[0]` because `num_available_devices` on my device is just 1. In case\n",
+    "you are working on a machine having large number of GPUs/TPUs you can easily use `jax.pmap`\n",
+    "to parallelize your execution. The only note while using `pmap` is that:\n",
+    "\n",
+    "The mapped `axis` size must be less than or equal to the number of local XLA devices available, as returned by `jax.local_device_count()` (unless devices is specified, see below). For nested `pmap` calls, the product of the mapped axis sizes must be less than or equal to the number of XLA devices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46614f2",
+   "metadata": {},
+   "source": [
+    "### Benefits of Parallelization with JAX\n",
+    "\n",
+    "- **Performance**: Parallelization enables efficient utilization of hardware resources, leading to faster execution times for computations.\n",
+    "- **Scalability**: With parallel execution, computations can scale to larger datasets and models, accommodating the growing demands of machine learning and scientific computing tasks.\n",
+    "- **Hardware Utilization**: JAX maximizes hardware utilization by leveraging multi-core CPUs and GPUs for parallel execution, improving overall efficiency and productivity."
    ]
   }
  ],
