--- a/lecture_01.ipynb
+++ b/lecture_01.ipynb
@@ -988,7 +988,13 @@
    "id": "02d93e9d",
    "metadata": {},
    "source": [
-    "In conclusion, this introductory lecture has provided a glimpse into the capabilities and features of JAX. We've explored how JAX offers a powerful platform for numerical computing and seamless interoperability with NumPy as well as how it differs from NumPy."
+    "In conclusion, this introductory lecture has provided a glimpse into the capabilities and features of JAX. We've explored how JAX offers a powerful platform for numerical computing and seamless interoperability with NumPy as well as how it differs from NumPy.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "\n",
+    "- [QuantEcon's JAX introduction](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [JAX Documentation](https://jax.readthedocs.io/en/latest/index.html)"
    ]
   }
  ],
