--- a/lecture_02.ipynb
+++ b/lecture_02.ipynb
@@ -877,6 +877,18 @@
     "result = jacobian_h(jnp.array([1.0, 0.0]))\n",
     "print(\"Jacobian of h at [1, 0]:\", result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a239ad24",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "\n",
+    "- [QuantEcon's JAX introduction](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [JAX Documentation](https://jax.readthedocs.io/en/latest/index.html)"
+   ]
   }
  ],
  "metadata": {
