--- a/lecture_03.ipynb
+++ b/lecture_03.ipynb
@@ -606,7 +606,12 @@
     "\n",
     "The function `computation_jit_lax` has clear advantanges over `computation_jit_python` because of two major reasons:\n",
     "- Very fast because of `jax.lax` and low-level optimizations done by jax.\n",
-    "- `computation_jit_python` has used `static_argnums` in `jax.jit` which means for every new values of `start` and `end`, `computation_jit_python` will re-compile and evaluate the results which will make it even slower unlike `computation_jit_lax`. Once compiled, `computation_jit_lax` will call the same function irrespective of the value of `start` and `end`."
+    "- `computation_jit_python` has used `static_argnums` in `jax.jit` which means for every new values of `start` and `end`, `computation_jit_python` will re-compile and evaluate the results which will make it even slower unlike `computation_jit_lax`. Once compiled, `computation_jit_lax` will call the same function irrespective of the value of `start` and `end`.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "\n",
+    "- [JAX Documentation](https://jax.readthedocs.io/en/latest/index.html)"
    ]
   }
  ],
