--- a/lecture_04.ipynb
+++ b/lecture_04.ipynb
@@ -710,7 +710,13 @@
     "\n",
     "- **Performance**: Parallelization enables efficient utilization of hardware resources, leading to faster execution times for computations.\n",
     "- **Scalability**: With parallel execution, computations can scale to larger datasets and models, accommodating the growing demands of machine learning and scientific computing tasks.\n",
-    "- **Hardware Utilization**: JAX maximizes hardware utilization by leveraging multi-core CPUs and GPUs for parallel execution, improving overall efficiency and productivity."
+    "- **Hardware Utilization**: JAX maximizes hardware utilization by leveraging multi-core CPUs and GPUs for parallel execution, improving overall efficiency and productivity.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "\n",
+    "- [QuantEcon's JAX introduction](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [JAX Documentation](https://jax.readthedocs.io/en/latest/index.html)"
    ]
   }
  ],
