--- a/lecture_05.ipynb
+++ b/lecture_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b4a5ed3",
+   "id": "b0d877e2",
    "metadata": {},
    "source": [
     "# Lecture 5: Linear and Logistic regression with JAX\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a4adf94",
+   "id": "e3201c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e4185a",
+   "id": "c72632a8",
    "metadata": {},
    "source": [
     "### Data preparation\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e99c876",
+   "id": "659f6d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce36fcfb",
+   "id": "80be1fe3",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b15d45",
+   "id": "c4c04900",
    "metadata": {},
    "source": [
     "Now, let's define the following two functions\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "509620b7",
+   "id": "7c4627ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4be143d",
+   "id": "ea117aac",
    "metadata": {},
    "source": [
     "We define a gradient function `grad_fn` using JAX's `grad` function, which computes the gradients of a given function (in this case, the loss function `loss_fn`) with respect to its input arguments."
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4071bce",
+   "id": "b6c72496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcad727",
+   "id": "88b7b057",
    "metadata": {},
    "source": [
     "Next, we define a training loop where we iterate over a fixed number of epochs (`num_epochs`). In each epoch, we compute the gradients of the loss function with respect to the model parameters using `grad_fn`. These gradients indicate the direction and magnitude of change needed to minimize the loss.\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b418550c",
+   "id": "0c8e1b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9e1c90de",
+   "id": "215a7b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "34f62c67",
+   "id": "37f0070f",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f686e1e",
+   "id": "75d9d69b",
    "metadata": {},
    "source": [
     "This is almost the same that we had assumed earlier while creating our dataset."
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1e636e",
+   "id": "2715188d",
    "metadata": {},
    "source": [
     "## Logistic regression\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "894e6d20",
+   "id": "3feafa18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "05e1bcd2",
+   "id": "c653808a",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c103ae5f",
+   "id": "cd6bf3d6",
    "metadata": {},
    "source": [
     "Now, let's define the following functions\n",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b019b480",
+   "id": "5b1b190c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b260fad2",
+   "id": "571189d0",
    "metadata": {},
    "source": [
     "Next, similar to liner regression, we define a training loop where we iterate over a fixed number of epochs (`num_epochs`). In each epoch, we compute the gradients of the loss function with respect to the model parameters using `grad_fn`.\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9aabd637",
+   "id": "0590ac44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b722e79e",
+   "id": "77fe67ce",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ce77fe",
+   "id": "0cbf74f8",
    "metadata": {},
    "source": [
     "Let's see how the predicted boundary looks like"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5a1568f4",
+   "id": "007f6f0f",
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +416,16 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00ce8813",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "- [JAX Documentation](https://jax.readthedocs.io/en/latest/index.html)"
    ]
   }
  ],
